--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "mysql2": "^3.14.1",
     "node-cron": "^4.1.0",
     "node-telegram-bot-api": "^0.61.0",
     "openai": "^4.0.0"
